--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web:2.0.0.RELEASE")
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly 'org.projectlombok:lombok:1.16.20'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
 }
